created Button, Input and Selector ui components

--- a/src/components/FiltersWidget/FiltersWidget.css
+++ b/src/components/FiltersWidget/FiltersWidget.css
@@ -5,6 +5,16 @@
     box-shadow: -9px -1px 7px -4px #ccc;
 }
 
+.filtersWidget h2 {
+    margin: 0 0 20px;
+    font-size: 1.4rem;
+    font-weight: lighter;
+}
+
+.categoryName {
+    margin: 0 0 14px;
+}
+
 .priceLabel {
     margin-right: 8px;
 }
@@ -12,4 +22,8 @@
 .priceInput {
     width: 100px;
     margin-left: 8px;
+}
+
+.favoritesOnly {
+    font-size: 20px;
 }
