added styling to the Advert and AdvertsList components

--- a/src/components/FiltersWidget/FiltersWidget.css
+++ b/src/components/FiltersWidget/FiltersWidget.css
@@ -2,13 +2,17 @@
     width: 450px;
     height: 100vh;
     padding: 15px;
-    box-shadow: -9px -1px 7px -4px #ccc;
+    box-shadow: -7px -1px 7px -4px #ccc;
 }
 
 .filtersWidget h2 {
     margin: 0 0 20px;
     font-size: 1.4rem;
     font-weight: lighter;
+}
+
+.formElementContainer {
+    margin-bottom: 25px;
 }
 
 .categoryName {
@@ -26,4 +30,17 @@
 
 .favoritesOnly {
     font-size: 20px;
+}
+
+.categorySelect {
+    width: 90%;
+    height: 30px;
+    border-radius: 3px;
+    border: solid 1px #d4d8db;
+    padding: 3px;
+    font-size: 0.9rem;
+}
+
+.categorySelect option {
+
 }
