added Header component

--- a/src/components/AdvertsList/AdvertsList.css
+++ b/src/components/AdvertsList/AdvertsList.css
@@ -1,5 +1,8 @@
 .advertsList {
-    width: 100%;
+    width: 80%;
+    min-height: 100vh;
     padding: 15px;
+    margin-top: 60px;
     background-color: #f0f0f0;
+    box-sizing: border-box;
 }
