--- a/src/components/FiltersWidget/FiltersWidget.css
+++ b/src/components/FiltersWidget/FiltersWidget.css
@@ -1,8 +1,14 @@
 .filtersWidget {
-    width: 450px;
+    width: 20%;
     height: 100vh;
     padding: 15px;
     box-shadow: -7px -1px 7px -4px #ccc;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1000;
+    box-sizing: border-box;
 }
 
 .filtersWidget h2 {
