--- a/src/components/Advert/Advert.css
+++ b/src/components/Advert/Advert.css
@@ -1,16 +1,16 @@
 .advert {
     width: 80%;
-    height: 400px;
+    height: 300px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 7px #ccc;
-    margin: 0 auto;
+    margin: 0 auto 40px;
     padding: 15px;
 }
 
 @media screen and (min-width: 1200px) {
     .advert {
         width: 800px;
-        height: 450px;
+        height: 300px;
     }
 }
