--- a/src/components/AdvertsList/AdvertsList.css
+++ b/src/components/AdvertsList/AdvertsList.css
@@ -2,7 +2,7 @@
     width: 80%;
     min-height: 100vh;
     padding: 15px;
-    margin-top: 60px;
+    padding-top: 60px;
     background-color: #f0f0f0;
     box-sizing: border-box;
 }
