--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,11 +2,16 @@
     position: fixed;
     top: 0;
     left: 0;
+    display: flex;
+    align-items: center;
     width: 100%;
     height: 60px;
     padding: 15px;
-    background-color: #f0f0f0;
+    background-color: rgba(240, 240, 240, 0.9);  
+    box-sizing: border-box;
+}
+
+.header h1 {
     font-weight: lighter;
     font-size: 1.3rem;
-    box-sizing: border-box;
 }
