--- a/src/components/UI/Button/HamburgerButton/HamburgerButton.css
+++ b/src/components/UI/Button/HamburgerButton/HamburgerButton.css
@@ -5,21 +5,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    margin: 0 20px;
     cursor: pointer;
 }
 
 .hamburgerButton div {
     width: 85%;
     height: 4px;
-    margin: 4px 0;
+    margin: 3px 0;
     background-color: #0575e6;
     border-radius: 4px;
-}
-
-@media screen and (min-width: 1014px) {
-    .hamburgerButton {
-        width: 50px;
-        height: 50px;
-    }
 }
