--- a/src/components/UI/Backdrop/Backdrop.css
+++ b/src/components/UI/Backdrop/Backdrop.css
@@ -4,5 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2000;
+    background-color: #000;
+    opacity: 0.3;
+    z-index: 1000;
 }
