--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -7,7 +7,8 @@
     width: 100%;
     height: 60px;
     padding: 15px;
-    background-color: rgba(240, 240, 240, 0.9);  
+    background-color: rgba(240, 240, 240, 0.9);
+    box-shadow: 2px 5px 5px -3px #ccc;
     box-sizing: border-box;
 }
 
