--- a/src/components/UI/Selector/Selector.css
+++ b/src/components/UI/Selector/Selector.css
@@ -1,9 +1,11 @@
 .selector {
     width: 80%;
+    max-width: 320px;
     height: 30px;
     border-radius: 3px;
     border: solid 1px #d4d8db;
     box-shadow: inset 0 0 2px #ccc;
     padding: 3px;
+    margin: 0 10px;
     font-size: 0.9rem;
 }
