--- a/src/components/UI/Button/HamburgerButton/HamburgerButton.css
+++ b/src/components/UI/Button/HamburgerButton/HamburgerButton.css
@@ -5,7 +5,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 auto 0 20px;
+    margin: 0 auto;
+    padding: 0 20px;
     cursor: pointer;
     z-index: 3000;
 }
