--- a/src/components/UI/Button/HamburgerButton/HamburgerButton.css
+++ b/src/components/UI/Button/HamburgerButton/HamburgerButton.css
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    padding: 0 20px;
+    padding-right: 20px;
     cursor: pointer;
     z-index: 3000;
 }
