--- a/src/components/UI/Button/HamburgerButton/HamburgerButton.css
+++ b/src/components/UI/Button/HamburgerButton/HamburgerButton.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
+    margin: 0 auto 0 0;
     padding-right: 20px;
     cursor: pointer;
     z-index: 3000;
@@ -15,7 +15,7 @@
     width: 85%;
     height: 4px;
     margin: 3px 0;
-    background-color: #0575e6;
+    background-color: #0070c9;
     border-radius: 4px;
     transition: transform 0.1s;
 }
