--- a/src/components/Advert/Advert.css
+++ b/src/components/Advert/Advert.css
@@ -1,6 +1,7 @@
 .advert {
     width: 90%;
     height: 300px;
+    max-width: 700px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 7px #ccc;
@@ -10,7 +11,7 @@
 
 @media screen and (min-width: 1200px) {
     .advert {
-        width: 800px;
+        width: 700px;
         height: 300px;
     }
 }
