--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -10,6 +10,7 @@
     background-color: rgba(240, 240, 240, 0.9);
     box-shadow: 2px 5px 5px -3px #ccc;
     box-sizing: border-box;
+    z-index: 2000;
 }
 
 .header h1 {
