--- a/src/components/Advert/Advert.css
+++ b/src/components/Advert/Advert.css
@@ -1,17 +1,70 @@
 .advert {
-    width: 90%;
-    height: 300px;
-    max-width: 700px;
+    width: 100%;
+    max-width: 500px;
     background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0 0 7px #ccc;
+    box-shadow: 0 0 7px #cccccc;
     margin: 0 auto 20px;
-    padding: 15px;
+    padding: 5px;
+    font-size: 0.95rem;
+    display: flex;
+    box-sizing: border-box;
+}
+
+.title {
+    margin: 0 0 5px;
+    font-size: 0.9rem;
+}
+
+.price {
+    font-weight: bolder;
+    margin: 0 0 5px;
+    font-size: 0.9rem;
+}
+
+.sellerInfo {
+    margin: 0 0 5px;
+    font-size: 0.8rem;
+}
+
+.imageContainer {
+    width: 45%;
+    height: auto;
+    max-width: 350px;
+    margin-right: 5px;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+}
+
+.imageContainer img {
+    width: 100%;
+    height: auto;
+}
+
+.mainInfo {
+    width: 55%;
+}
+
+@media screen and (min-width: 500px) {
+    .title, .price, .sellerInfo {
+        font-size: 1rem;
+    }
+
+    .imageContainer {
+        margin-right: 10px;
+    }
 }
 
 @media screen and (min-width: 1200px) {
     .advert {
-        width: 700px;
-        height: 300px;
+        width: 55%;
+        max-width: 700px;
+    }
+}
+
+@media screen and (min-width: 1600px) {
+    .title, .price, .sellerInfo {
+        font-size: 1.1rem;
     }
 }
