--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
     display: none;
-    width: 20%;
-    min-width: 300px;
+    width: 25%;
+    max-width: 400px;
     height: 100vh;
     margin-top: 60px;
     padding: 15px;
