added styles to the Selector and HamburgerButton components, added autocomplete="off" attribute to the inputs in PriceFilter component

--- a/src/components/UI/Button/HamburgerButton/HamburgerButton.css
+++ b/src/components/UI/Button/HamburgerButton/HamburgerButton.css
@@ -46,3 +46,9 @@
         margin: 4px 0;
     }
 }
+
+@media screen and (min-width: 960px) {
+    .hamburgerButton {
+        display: none;
+    }
+}
