--- a/src/components/UI/Selector/Selector.css
+++ b/src/components/UI/Selector/Selector.css
@@ -15,3 +15,9 @@
         max-width: 500px;
     }
 } */
+
+@media screen and (min-width: 960px) {
+    .selector {
+        margin-left: auto;
+    }
+}
