--- a/src/components/Advert/Advert.css
+++ b/src/components/Advert/Advert.css
@@ -11,20 +11,18 @@
     box-sizing: border-box;
 }
 
-.title {
-    margin: 0 0 5px;
-    font-size: 0.9rem;
+.title, .price {
+    margin: 0 0 10px;
+    font-size: 0.8rem;
 }
 
 .price {
     font-weight: bolder;
-    margin: 0 0 5px;
-    font-size: 0.9rem;
 }
 
 .sellerInfo {
     margin: 0 0 5px;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
 }
 
 .imageContainer {
@@ -35,6 +33,7 @@
     box-sizing: border-box;
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .imageContainer img {
@@ -42,17 +41,40 @@
     height: auto;
 }
 
+.additionalPhotos {
+    width: 35px;
+    height: 35px;
+    position: absolute;
+    right: 10px;
+    bottom: 10px;
+    border-radius: 100%;
+    background-color: rgba(0, 112, 201, 0.9);
+    color: #fff;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .mainInfo {
     width: 55%;
 }
 
-@media screen and (min-width: 500px) {
-    .title, .price, .sellerInfo {
-        font-size: 1rem;
+@media screen and (min-width: 400px) {
+    .sellerInfo {
+        font-size: 0.8rem;
     }
+}
 
+@media screen and (min-width: 500px) {
     .imageContainer {
         margin-right: 10px;
+    }
+}
+
+@media screen and (min-width: 960px) {
+    .title, .price, .sellerInfo {
+        font-size: 1rem;
     }
 }
 
