added styling for the "addToFavorites" button type

--- a/src/components/AdvertsList/AdvertsList.css
+++ b/src/components/AdvertsList/AdvertsList.css
@@ -2,8 +2,8 @@
     width: 100%;
     min-height: 100vh;
     padding: 10px;
-    padding-top: 70px;
-    background-color: #f0f0f0;
+    padding-top: 80px;
+    background-color: #fff;
     box-sizing: border-box;
 }
 
