--- a/src/components/Advert/Advert.css
+++ b/src/components/Advert/Advert.css
@@ -9,6 +9,7 @@
     font-size: 0.95rem;
     display: flex;
     box-sizing: border-box;
+    position: relative;
 }
 
 .title, .price {
@@ -42,14 +43,15 @@
 }
 
 .additionalPhotos {
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
     position: absolute;
     right: 10px;
     bottom: 10px;
     border-radius: 100%;
     background-color: rgba(0, 112, 201, 0.9);
     color: #fff;
+    font-size: 0.8rem;
     font-weight: bold;
     display: flex;
     justify-content: center;
@@ -70,10 +72,22 @@
     .imageContainer {
         margin-right: 10px;
     }
+
+    .additionalPhotos {
+        width: 30px;
+        height: 30px;
+        font-size: 0.9rem;
+    }
 }
 
 @media screen and (min-width: 960px) {
     .title, .price, .sellerInfo {
+        font-size: 1rem;
+    }
+
+    .additionalPhotos {
+        width: 35px;
+        height: 35px;
         font-size: 1rem;
     }
 }
