--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,4 +1,4 @@
-.advert {
+.product {
     width: 100%;
     max-width: 500px;
     background-color: #fff;
@@ -93,7 +93,7 @@
 }
 
 @media screen and (min-width: 1200px) {
-    .advert {
+    .product {
         width: 55%;
         max-width: 700px;
     }
