--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -28,7 +28,7 @@
 
 .imageContainer {
     width: 45%;
-    height: auto;
+    padding-bottom: 45%;
     max-width: 350px;
     margin-right: 5px;
     box-sizing: border-box;
@@ -38,8 +38,11 @@
 }
 
 .imageContainer img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 .additionalPhotos {
