--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -17,23 +17,12 @@
     font-size: 0.8rem;
 }
 
-.sellerInfo {
-    margin: 0 0 5px;
-    font-size: 0.7rem;
-}
-
 .mainInfo {
     width: 55%;
 }
 
-@media screen and (min-width: 400px) {
-    .sellerInfo {
-        font-size: 0.8rem;
-    }
-}
-
 @media screen and (min-width: 960px) {
-    .title, .price, .sellerInfo {
+    .title {
         font-size: 1rem;
     }
 }
@@ -46,7 +35,7 @@
 }
 
 @media screen and (min-width: 1600px) {
-    .title, .price, .sellerInfo {
+    .title {
         font-size: 1.1rem;
     }
 }
