--- a/src/components/ProductContainer/ProductContainer.css
+++ b/src/components/ProductContainer/ProductContainer.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
